blocks/newslist/newslist.css
.section.newslist-container {
  padding: 0 15px 64px;
}

.newslist.block {
  width: 90%;
  margin-left: 10px;
  padding-top: 25px;
}

.newslist .newslist-container .newslist-item {
  border: 1px solid #ccc;
  border-top: 4px solid #6c2cb9;
  padding: 15px;
  margin-bottom: 50px;
}

.newslist .newslist-container .newslist-item h4 {
  font-family: var(--graphik-semibold);
  font-size: 20px;
  font-weight: 600;
  color: #000;
  margin-top: 0;
  margin-bottom: 13px;
  line-height: 1.2;
}

.newslist .newslist-container .newslist-item h4 a {
  font-family: var(--graphik-semibold);
  font-size: var(--body-font-size-s);
  font-weight: 600;
  color: #000;
  margin-bottom: 13px;
  line-height: 1.2;
  margin-left: auto;
  margin-right: auto;
}

.newslist .newslist-container .newslist-item .newslist-item-description {
  font-family: var(--header-font-family);
  font-size: var(--body-font-size-xxs);
  color: #000;
  margin-bottom: 20px;
  padding: 0 0 20px;
  line-height: 1.83;
}

.newslist .newslist-container .newslist-item .newslist-item-footer a {
  font-family: var(--graphik-semibold);
  text-transform: uppercase;
  font-size: var(--body-font-size-xs);
  font-weight: 600;
  color: var(--link-color);
}

.newslist .newslist-container .newslist-item .newslist-item-footer a .read-more-arrow {
  display: inline-block;
  height: 20px;
  width: 40px;
  line-height: 20px;
  background: transparent url('/icons/arrow-icon.svg') no-repeat 0 -8px;
}

.newslist .newslist-container .newslist-item .newslist-item-footer .newslist-item-publisheddate {
  font-family: var(--graphik-semibold);
  font-size: 12px;
  font-weight: 600;
  line-height: 1.33;
  color: #000;
  float: right;
  padding: 9px 0;
  text-transform: uppercase;
}

.newslist .newslist-pagination-container {
  display: flex;
  justify-content: center;
  gap: 4em;
}

.newslist .newslist-pagination-container .pagination-link,
.newslist .newslist-pagination-container .pagination-ellipsis {
  display: none;
}

.newslist .newslist-pagination-container .pagination-next-arrow::before,
.newslist .newslist-pagination-container .pagination-prev-arrow::before {
  display: block;
  font-family: var(--icomoon);
  font-size: 40px;
  content: '\e900';
  color: #000;
  font-weight: 400;
}

.newslist .newslist-pagination-container .pagination-prev-arrow::before {
  transform: rotateY(180deg) !important;

  /* stylelint-disable-next-line property-no-vendor-prefix */
  -webkit-transform: rotateY(180deg) !important;
}

.newslist .newslist-pagination-container a[aria-disabled='true'] .pagination-prev-arrow::before,
.newslist .newslist-pagination-container a[aria-disabled='true'] .pagination-next-arrow::before {
  color: #ccc;
}

.newslist .newslist-container.search-results-container {
  display: block;
}

#search-form {
  display: flex;
  width: 92%;
  padding: 15px;
  border: 1px solid transparent;
  border-radius: 0;

  /* stylelint-disable-next-line property-no-vendor-prefix */
  -webkit-box-shadow: 0 1px 1px rgb(0 0 0 / 5%);
  box-shadow: 0 1px 1px rgb(0 0 0 / 5%);
}

#search-input {
  height: 46px;
  padding: 10px 16px;
  font-size: var(--body-font-size-s);
  line-height: 1.3333;
  border-radius: 6px;
  color: #555;
  background-color: var(--background-color);
  background-image: none;
  border: 1px solid #ccc;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  max-width: none;
}

#search-form input[type='submit'] {
  width: 13.4rem;
  padding: 15px 18px;
  border-radius: 0;
  background-color: #000;
  background-image: none;
  border-color: #000;
  font-weight: bold;
  font-size: .875rem;
  line-height: 1rem;
  font-family: var(--graphik-semibold);
  color: #fff;
  text-align: center;
  border: 0;
  white-space: nowrap;
}

.search-header-container h2 {
  font-family: var(--header-font-family-regular);
  font-size: 30px;
  font-weight: bold;
  line-height: 1.1;
  margin-top: 40px;
  margin-bottom: 50px;  
}

.search-header-container .search-sub-header {
  display: flex;
  width: 100%;
  justify-content: space-between;
  padding-bottom: 20px;
}

.search-header-container .search-sub-header .search-sub-header-right {
  padding-right: 15px;
  padding-left: 15px;
}

.search-header-container .search-sub-header h3 {
  font-family: var(--header-font-family-regular);
  font-size: var(--body-font-size-s);
  text-transform: uppercase;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 10px;
}

.newslist .search-results-container .search-results-item {
  width: 100%;
  padding-top: 20px;
  padding-bottom: 10px;
  border-top: 2px solid #ccc;
}

.newslist .search-results-container .search-results-item .search-results-item-published-date {
  font-family: var(--graphik-semibold);
  font-size: 12px;
  font-weight: 600;
  line-height: 1.33;
  color: #000;
  padding-bottom: 9px;
  text-transform: uppercase;
}

.newslist .search-results-container .search-results-item .search-results-item-title {
  font-family: var(--graphik-semibold);
  font-size: 20px;
  font-weight: 600;
  color: #000;
  margin-bottom: 13px;
  line-height: 1.2;
}

.newslist .search-results-container .search-results-item .search-results-item-content {
  padding-bottom: 20px;
  margin-bottom: 20px;
  font-family: var(--header-font-family);
  font-size: var(--body-font-size-xs);
  color: #000;
  line-height: 1.6;
}

#newslist-search-form {
  display: none;
}

#filter-form .newslist-filter-arrow {
  display: inline-block;
  cursor: pointer;
  transform: rotate(90deg);
  width: 18px;
  height: 18px;
  color: transparent;
  border: none;
  background: transparent url('/icons/calendar-arrow-icon.svg') -9px -11px no-repeat;
  margin-left: 10px;
  margin-top: 3px;
  transition: all .5s ease;
}

#filter-form .newslist-filter-arrow.active {
  transform: rotate(-90deg);
}
/* ... */

